--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,14 +1,27 @@
 name: main
-on: [push]
+## Triggers the workflow on when there is a push, or 
+## pull request on the main branch
+on: push 
+
+env:
+  ## Sets environment variable
+  API_KEY: XXXXXXXXXXXX    
+
 jobs:
-  check-python-version:
+  job1:
+    ## The type of runner that the job will run on, 
+    ## here it runs on ubuntu latest
+    runs-on: ubuntu-latest 
+    steps:
+      - name: step 1
+        ## Reference your environment variables
+        run: echo "The API key is:${{env.API_KEY}}"   
+
+  job2:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v3
-        with:
-          python-version: '3.10'
-      - run: python --version
-      - run: python first.py
-    
+      - name: step 1
+        ## Another way reference your environment variables
+        run: echo "The API key is:$API_KEY"
+
      
