--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,17 +1,41 @@
+# name: main
+# ## Triggers the workflow on when there is a push, or 
+# ## pull request on the main branch
+# on: push 
+
+# env:
+#   ## Sets environment variable
+#   API_KEY: XXXXXXXXXXXX    
+
+# jobs:
+#   job1:
+#     ## The type of runner that the job will run on, 
+#     ## here it runs on ubuntu latest
+#     runs-on: ubuntu-latest 
+#     steps:
+#       - name: step 1
+#         ## Reference your environment variables
+#         run: echo "The API key is:${{env.API_KEY}}"   
+
+#   job2:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: step 1
+#         ## Another way reference your environment variables
+#         run: echo "The API key is:$API_KEY"
+
 name: main
 ## Triggers the workflow on when there is a push, or 
 ## pull request on the main branch
 on: push 
 
-env:
-  ## Sets environment variable
-  API_KEY: XXXXXXXXXXXX    
-
 jobs:
   job1:
-    ## The type of runner that the job will run on, 
-    ## here it runs on ubuntu latest
+    ## The type of runner that the job will run on
     runs-on: ubuntu-latest 
+    env:
+      ## Environment variable
+      API_KEY: XXXXXXXXXXXX    
     steps:
       - name: step 1
         ## Reference your environment variables
@@ -22,6 +46,4 @@ jobs:
     steps:
       - name: step 1
         ## Another way reference your environment variables
-        run: echo "The API key is:$API_KEY"
-
-     
+        run: echo "The API key is:$API_KEY"      
