--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,7 +39,8 @@ jobs:
     steps:
       - name: step 1
         ## Reference your environment variables
-        run: echo "The API key is:${{env.API_KEY}}"   
+        # run: echo "The API key is:${{env.API_KEY}}"  
+        run: echo "The API key is:$API_KEY"  
 
   job2:
     runs-on: ubuntu-latest
