--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,29 +2,27 @@
 # ## Triggers the workflow on when there is a push, or 
 # ## pull request on the main branch
 # on: push 
-
-# env:
-#   ## Sets environment variable
-#   API_KEY: XXXXXXXXXXXX    
-
 # jobs:
 #   job1:
-#     ## The type of runner that the job will run on, 
-#     ## here it runs on ubuntu latest
+#     ## The type of runner that the job will run on
 #     runs-on: ubuntu-latest 
+#     env:
+#       ## Environment variable
+#       API_KEY: XXXXXXXXXXXX    
 #     steps:
 #       - name: step 1
 #         ## Reference your environment variables
-#         run: echo "The API key is:${{env.API_KEY}}"   
+#         # run: echo "The API key is:${{env.API_KEY}}"  
+#         run: echo "The API key is:$API_KEY"  
 
 #   job2:
 #     runs-on: ubuntu-latest
 #     steps:
 #       - name: step 1
 #         ## Another way reference your environment variables
-#         run: echo "The API key is:$API_KEY"
+#         run: echo "The API key is:$API_KEY"   
 
-name: main
+name: env_tutorial
 ## Triggers the workflow on when there is a push, or 
 ## pull request on the main branch
 on: push 
@@ -33,18 +31,13 @@ jobs:
   job1:
     ## The type of runner that the job will run on
     runs-on: ubuntu-latest 
-    env:
-      ## Environment variable
-      API_KEY: XXXXXXXXXXXX    
     steps:
       - name: step 1
+        env:
+          ## Environment variable for step 1
+          API_KEY: XXXXXXXXXXXX    
         ## Reference your environment variables
-        # run: echo "The API key is:${{env.API_KEY}}"  
-        run: echo "The API key is:$API_KEY"  
-
-  job2:
-    runs-on: ubuntu-latest
-    steps:
-      - name: step 1
-        ## Another way reference your environment variables
-        run: echo "The API key is:$API_KEY"      
+        run: echo "The API key is:${{env.API_KEY}}"   
+      - name: step 2
+        ## Reference your environment variables
+        run: echo "The API key is:${{env.API_KEY}}" 
