--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,7 +39,7 @@ jobs:
           API_KEY1: 3
 
         ## Reference your environment variables
-        run: echo "The API key is:${{env.API_KEY+env.API_KEY}}"   
+        run: echo "The API key is:${{env.API_KEY+env.API_KEY1}}"   
       - name: step 2
         ## Reference your environment variables
         run: echo "The API key is:${{env.API_KEY}}" 
