--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,7 @@
 #     ## The type of runner that the job will run on
 #     runs-on: ubuntu-latest 
 #     env:
+
 #       ## Environment variable
 #       API_KEY: XXXXXXXXXXXX    
 #     steps:
@@ -22,24 +23,44 @@
 #         ## Another way reference your environment variables
 #         run: echo "The API key is:$API_KEY"   
 
+# name: main
+# ## Triggers the workflow on when there is a push, or 
+# ## pull request on the main branch
+# on: push 
+
+# jobs:
+#   job1:
+#     ## The type of runner that the job will run on
+#     runs-on: ubuntu-latest 
+#     steps:
+#       - name: step 1
+#         env:
+#           ## Environment variable for step 1
+#           API_KEY: 2
+#           API_KEY1: 3
+
+#         ## Reference your environment variables
+#         run: echo "The API key is:${{env.API_KEY+env.API_KEY1}}"   
+#       - name: step 2
+#         ## Reference your environment variables
+#         run: echo "The API key is:${{env.API_KEY}}" 
+
 name: main
-## Triggers the workflow on when there is a push, or 
-## pull request on the main branch
-on: push 
 
+on:
+  schedule:
+    
+    - cron: '5 * * * *'
 jobs:
-  job1:
-    ## The type of runner that the job will run on
-    runs-on: ubuntu-latest 
-    steps:
-      - name: step 1
-        env:
-          ## Environment variable for step 1
-          API_KEY: 2
-          API_KEY1: 3
+  build:
+    name: Trigger Site Rebuild
+    runs-on: ubuntu-latest
+    env:
 
-        ## Reference your environment variables
-        run: echo "The API key is:${{env.API_KEY+env.API_KEY1}}"   
-      - name: step 2
-        ## Reference your environment variables
-        run: echo "The API key is:${{env.API_KEY}}" 
+      ## Environment variable
+      Name: "AMAN" 
+    steps:
+        
+      - name: step 1
+        ## Another way reference your environment variables
+        run: echo "The API key is:$Name
