--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,32 +23,58 @@
 #         ## Another way reference your environment variables
 #         run: echo "The API key is:$API_KEY"   
 
+# name: main
+
+# on: push 
+
+# env:
+
+#       ## Environment variable define globally
+#     Name: "aman" 
+# jobs:
+#   job1:
+    
+#     runs-on: ubuntu-latest 
+     
+#     steps:
+#       - name: step 1
+        
+#         run: echo "The API key is:${{env.Name}}"  
+        
+
+#   job2:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: step 1
+      
+#         run: echo "The API key is:$Name"
+
 name: main
-## Triggers the workflow on when there is a push, or 
-## pull request on the main branch
+
 on: push 
 
 env:
 
-      ## Environment variable
-    Name: "aman" 
+      ## Environment variable define globally
+    A: 1
+    B: 5 
 jobs:
   job1:
-    ## The type of runner that the job will run on
+    
     runs-on: ubuntu-latest 
      
     steps:
       - name: step 1
-        ## Reference your environment variables
-        run: echo "The API key is:${{env.Name}}"  
+        
+        run: echo "The API key is:${{env.A }}"  
         
 
   job2:
     runs-on: ubuntu-latest
     steps:
       - name: step 1
-        ## Another way reference your environment variables
-        run: echo "The API key is:$Name"   
+      
+        run: echo "The API key is:${A+B}" 
 
 
 # name: main
