--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,7 +53,7 @@ name: main
 
 on: push 
 
-env: |
+env: 
 
       ## Environment variable define globally
     name1: "aman"
@@ -67,7 +67,7 @@ jobs:
     steps:
       - name: step 1
         
-        run: echo "The API key is:${{env.name1 + env.name2}}"  
+        run: echo "The name  is:${{env.name1 + env.name2}}"  
         
 
   job2:
