--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -67,7 +67,7 @@ jobs:
     steps:
       - name: step 1
         
-        run: echo "The name both are:${{env.name1  env.name2}}"  
+        run: echo "The name both are:$env.name1 $env.name2"  
         
 
   job2:
@@ -78,27 +78,7 @@ jobs:
         run: echo "The both name are :${name1 , name2}" 
 
 
-# name: main
-# ## Triggers the workflow on when there is a push, or 
-# ## pull request on the main branch
-# on: push 
-
-# jobs:
-#   job1:
-#     ## The type of runner that the job will run on
-#     runs-on: ubuntu-latest 
-#     steps:
-#       - name: step 1
-#         env:
-#           ## Environment variable for step 1
-#           API_KEY: 2
-#           API_KEY1: 3
-
-#         ## Reference your environment variables
-#         run: echo "The API key is:${{env.API_KEY+env.API_KEY1}}"   
-#       - name: step 2
-#         ## Reference your environment variables
-#         run: echo "The API key is:${{env.API_KEY}}" 
+ 
 
 # name: main
 
