--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -70,7 +70,7 @@ jobs:
     steps:
       - name: step 1
         
-        run: echo "The name both are:$env.name1 $name2"  
+        run: echo "The name both are:$env.name1 $env.name2"  
         
 
   job2:
