--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -87,7 +87,7 @@ name: main
 
 on: push 
   schedule:
-    - cron: '5 * * * *'
+    - cron: '*/5 * * * *'
 jobs:
   build:
     name: Trigger Site Rebuild
