--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,8 +58,8 @@ name: main
 
 on: 
   push:
-  schedule:
-    - cron: '*/1 * * * *'
+#   schedule:
+#     - cron: '*/1 * * * *'
 jobs:
   build:
    
