--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,7 +63,7 @@ on:
 jobs:
   build:
    
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
    
     steps:
       - uses: actions/checkout@v1  
