--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,20 +1,20 @@
-# name: main
-# ## Triggers the workflow on when there is a push, or 
-# ## pull request on the main branch
-# on: push 
-# jobs:
-#   job1:
-#     ## The type of runner that the job will run on
-#     runs-on: ubuntu-latest 
-#     env:
+name: main
+## Triggers the workflow on when there is a push, or 
+## pull request on the main branch
+on: push 
+jobs:
+  job1:
+    ## The type of runner that the job will run on
+    runs-on: ubuntu-latest 
+    env:
 
-#       ## Environment variable
-#       API_KEY: XXXXXXXXXXXX    
-#     steps:
-#       - name: step 1
-#         ## Reference your environment variables
-#         # run: echo "The API key is:${{env.API_KEY}}"  
-#         run: echo "The API key is:$API_KEY"  
+      ## Environment variable
+      API_KEY: XXXXXXXXXXXX    
+    steps:
+      - name: step 1
+        ## Reference your environment variables
+        # run: echo "The API key is:${{env.API_KEY}}"  
+        run: echo "The API key is:$API_KEY"  
 
 #   job2:
 #     runs-on: ubuntu-latest
@@ -54,21 +54,21 @@
 
  
 
-name: main
+# name: main
 
-on: 
-  push:
-#   schedule:
-#     - cron: '*/1 * * * *'
-jobs:
-  build:
+# on: 
+#   push:
+# #   schedule:
+# #     - cron: '*/1 * * * *'
+# jobs:
+#   build:
    
-    runs-on: self-hosted
+#     runs-on: self-hosted
    
-    steps:
-      - uses: actions/checkout@v1  
-      - name: step 1
-        ## Another way reference your environment variables
-        run: echo "runing"
+#     steps:
+#       - uses: actions/checkout@v1  
+#       - name: step 1
+#         ## Another way reference your environment variables
+#         run: echo "runing"
 
 
